Fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,7 +48,7 @@ p {
       ),
       /* bottom, image */
       url(/../assets/images/2.jpg);
-      height: 90vh;
+      height: 80vh;
     background-position: center; 
     background-size: cover;
   }
